--- a/计算资源收集.md
+++ b/计算资源收集.md
@@ -8,9 +8,10 @@
 1. 毫无疑问及其厉害的一个:Mozilla基金会的Mozilla开发者网络--`简称MDN`
 
    > - 国内版：https://developer.mozilla.org/zh-CN/
+   > - 评价： 是一个学习前端规范和网络协议的第一选择
    > - 涵盖范围：web开发技术：HTML javascript css HTTP  API/DOM和HTTP及其他
-   
-5. bootstrap的文件上传插件---`fileInput`
+
+2. bootstrap的文件上传插件---`fileInput`
 
    > - FileInput插件不仅可以上传图片 视频，还可以上传文件。所以可以使用这个插件完成一个项目的所有的文件上传的需求
    > - 国内版：http://www.bootstrap-fileinput.com/
@@ -23,12 +24,13 @@
 
    > - 官网：https://summernote.org/
    > - github地址：https://github.com/summernote/summernote/
-   
+
 5. Vue----js框架
 
    > - 官方网站：  https://cn.vuejs.org/
    > - github地址： https://github.com/vuejs/vue
-   > - 一款优秀的js框架
+   > - 评价： 一款优秀的js框架。
+   > - 优点：Vue的强大之处在于它的数据绑定和实时渲染。现在已经到Vue 3了。很多新的开发理念和配套工具也发布了。
 
 # 3. 后端的技术文档
 
@@ -44,6 +46,7 @@
    > - 官网网站：https://squoosh.app/
    > - 汉化网站:https://squoosh.net/
    > - github地址:https://github.com/GoogleChromeLabs/squoosh/
+   > - 评价： 压缩效率极高，谷歌出品
 
 2. AI图片人工智能放大
 
@@ -55,7 +58,7 @@
 
    > - 官网地址：https://www.bookstack.cn/
    > - 不仅有技术栈的官方文档还有一些教程和开源的书籍
-   
+
 2. 尚硅谷教学资料
 
    > - 官网地址：https://shimo.im/docs/JJpWxtgPHxHPyCJG/read
