--- a/计算机资源收集.md
+++ b/计算机资源收集.md
@@ -76,3 +76,9 @@
    > - 描述：是一个集合设计师需要的所有东西的一个网站
    > - 官方网址: https://hao.uisdc.com/
 
+# 7.宝藏网站
+
+1.正版软件
+
+    > - 描述：一个分享正版软件打折免费信息的网站
+    > - 网址：https://www.getitfree.cn/
