add a useful website i personally feel

--- a/计算机资源收集.md
+++ b/计算机资源收集.md
@@ -78,7 +78,7 @@
 
 # 7.宝藏网站
 
-1.正版软件
+1. 正版中国
 
-    > - 描述：一个分享正版软件打折免费信息的网站
-    > - 网址：https://www.getitfree.cn/
+   > - 描述：一个分享正版软件打折免费信息的网站
+   > - 网址：https://www.getitfree.cn/
