add some website

--- a/计算机资源收集.md
+++ b/计算机资源收集.md
@@ -50,7 +50,7 @@
 
 2. AI图片人工智能放大
 
-   > - 官网网站： https://bigjpg.com/
+   > 1. 官网网站： https://bigjpg.com/
 
 # 5. 书籍文档
 
@@ -75,6 +75,17 @@
 
    > - 描述：是一个集合设计师需要的所有东西的一个网站
    > - 官方网址: https://hao.uisdc.com/
+   
+3. 日本传统色系配色网
+
+   > - 描述：是一个收录所谓日本传统色系为主，前前后后共250种颜色，项目颜色的选择可参考该网站，需翻墙
+   > - 网址：https://nipponcolors.com/#koke
+
+4. Awesome Wallpapers & Unsplash
+
+   > - 描述：优秀的图片壁纸网站
+   > - 网址1：https://wallhaven.cc/
+   > - 网址2：https://unsplash.com/
 
 # 7.宝藏网站
 
@@ -82,3 +93,8 @@
 
    > - 描述：一个分享正版软件打折免费信息的网站
    > - 网址：https://www.getitfree.cn/
+
+1. 阿虚的储物间
+
+   > - 描述：集成各种网站例如影视，音乐，软件，冷门软件等
+   > - 网址：http://kyon945.ys168.com/
